Fix item position/alignment/text align

--- a/_sass/_scrollio.scss
+++ b/_sass/_scrollio.scss
@@ -210,7 +210,7 @@ body {
         }
         &.talign-center {
             &>.item {
-                text-align: right;
+                text-align: center;
             }
         }
         &.talign-right {
